Adding in the map screen

--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>hello phaser!</title>
-        <script src="./js/phaser.js"></script>
-        <script src="./js/character.js"></script>
-        <script src="./js/item.js"></script>
-        <script src="./js/spells.js"></script>
+        <title>Reknown</title>
+        <script src="./js/gameEngine/phaser.js"></script>
+        <script src="./js/objects/character.js"></script>
+        <script src="./js/objects/item.js"></script>
+        <script src="./js/objects/spells.js"></script>
+        <script src="./js/logic/battle.js"></script>
+        <script src="./js/logic/map.js"></script>
+        <script src="./js/logic/init.js"></script>
         <script src="./js/app.js"></script>
     </head>
     <body>
