commented out hitpoint UI code that was missed in last commit

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Reknown</title>
+        <title>Renown</title>
         <script src="./js/gameEngine/phaser.js"></script>
         <script src="./js/objects/character.js"></script>
         <script src="./js/objects/item.js"></script>
