Modified battle.js, added battleUI.js - Now shows player 2 ui and updates spell UI's particle tint to be related spell color.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="./js/objects/character.js"></script>
         <script src="./js/objects/item.js"></script>
         <script src="./js/objects/spells.js"></script>
+        <script src="./js/ui/battleUI.js"></script>
         <script src="./js/logic/battle.js"></script>
         <script src="./js/logic/map.js"></script>
         <script src="./js/logic/init.js"></script>
