removed unused files, added LICENSE and updated README.md

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="./js/objects/spells.js"></script>
         <script src="./js/ui/battleUI.js"></script>
         <script src="./js/logic/battle.js"></script>
+        <script src="./js/logic/ritual.js"></script>
         <script src="./js/logic/map.js"></script>
         <script src="./js/logic/init.js"></script>
         <script src="./js/app.js"></script>
